manifests/s3/deployment-garage-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-webui
  labels:
    app: garage-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garage-webui
  template:
    metadata:
      labels:
        app: garage-webui
    spec:
      volumes:
        - name: config
          configMap:
            name: garage-config
      containers:
        - name: webui
          image: khairul169/garage-webui:1.1.0
          ports:
            - containerPort: 3909
              name: webui
          volumeMounts:
            - name: config
              mountPath: /etc/garage.toml
              subPath: garage.toml
              readOnly: true
