manifests/s3/deployment-garage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage
  labels:
    app: garage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garage
  template:
    metadata:
      labels:
        app: garage
    spec:
      volumes:
        - name: config
          configMap:
            name: garage-config
        - name: garage-meta
          persistentVolumeClaim:
            claimName: garage-meta
        - name: garage-data
          persistentVolumeClaim:
            claimName: garage-data
      containers:
        - name: garage
          image: dxflrs/garage:v2.2.0
          ports:
            - containerPort: 3900
              name: s3-endpoint
            - containerPort: 3901
              name: rpc
            - containerPort: 3902
              name: s3-web
            - containerPort: 3903
              name: admin
          volumeMounts:
            - name: config
              mountPath: /etc/garage.toml
              subPath: garage.toml
            - name: garage-meta
              mountPath: /garage-meta
            - name: garage-data
              mountPath: /garage-data
